# Robot-

./: .gitignore  CMakeLists.txt  package.xml
config/: 99-robot-devices.rules  ekf.yaml  explore.yaml  keepout_mask.pgm  keepout_mask.yaml  keepout_zones.yaml  locations.yaml  lukas.rviz  nav2_params.yaml  robot.rviz  teleop_twist_joy_ps5.yaml
firmware/bno085_imu/: bno085_imu.ino
firmware/i2c_scan/: i2c_scan.ino
firmware/mpu9250_imu/: mpu9250_imu.ino
home_robot/nodes/: arm_driver.py  arm_moveit_bridge.py  arm_scene_obstacles.py  calibrate_odom.py  diarization_node.py  doa_node.py  explore_manager_node.py  face_detection_node.py  global_localizer_node.py  goto_room.py  imu_node.py  llm_bridge_node.py  mission_executor_node.py  object_detector.py  obstacle_prediction_node.py  obstacle_safety_node.py  person_follower_node.py  pick_place_node.py  pose_node.py  pose_saver_node.py  rag_memory_node.py  recovery_manager_node.py  room_markers_node.py  roomba_driver.py  semantic_costmap_node.py  situational_awareness_node.py  stt_node.py  task_planner_node.py  tracker_node.py  tts_node.py  vision_node.py  voice_control.py  wake_word_node.py  web_dashboard_node.py
launch/: arm_moveit.launch.py  bringup.launch.py  localize.launch.py  slam_only.launch.py  view_map.launch.py
maps/: home.pgm  home.yaml  kela.pgm  kela.yaml  kela2.pgm  kela2.yaml  room_colors.yaml
scripts/: check_gemini_quota.py  draw_keepout.py  quantize_npu_models.sh  reset_rtabmap.sh  save_map.sh  vendor_roarm_moveit.sh
training/wake_word_max/: README.md  evaluate.py  extract_features.py  generate_data.py  manifest.tsv  max.onnx  train.py
