<?xml version="1.0"?>
<package format="3">
  <name>home_robot</name>
  <version>0.1.0</version>
  <description>Home tidying robot — Roomba 692 + SLAMTEC C1 + RealSense D435</description>
  <maintainer email="tattoostamatis@gmail.com">dimi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>rtabmap_odom</depend>
  <depend>rtabmap_slam</depend>
  <depend>python3-serial</depend>
  <depend>robot_localization</depend>
  <depend>explore_lite</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
